[package]
name        = "cw-plus-tests"
version     = "0.10.0"
authors     = ["Kayanski <kowalski.web3@gmail.com>"]
edition     = "2021"
license     = "GPL-3.0-only"
repository  = "https://github.com/Abstract-OS/BOOT"
description = "Environment generic CosmWasm-plus scripting interfaces"
keywords    = ["cosmwasm", "blockchain"]
readme      = "README.md"

exclude = [".env"]

[[example]]
name              = "cw1-subkeys-chain"

[[example]]
name              = "cw20-base-mock"

[dependencies]
boot-core = { git = "https://github.com/Kayanski/BOOT", branch = "feature/new-contract-interface", features = ["daemon"] }

#contracts
cw1-subkeys        	= { git = "https://github.com/Kayanski/cw-plus", branch = "features/simpler_without_flags", features=["boot"] }
cw1-whitelist      	= { git = "https://github.com/Kayanski/cw-plus", branch = "features/simpler_without_flags", features=["boot"] }
cw20-base	      	= { git = "https://github.com/Kayanski/cw-plus", branch = "features/simpler_without_flags", features=["boot"] }

#packages
cw20				= { git = "https://github.com/Kayanski/cw-plus", branch = "features/simpler_without_flags", features=["boot"]}

# For bin
tokio   = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"], optional = true }
dotenv     = "0.15.0"
env_logger = "0.10.0"
anyhow = "1.0.70"
cosmwasm-std = "1.2.3"

[dev-dependencies]
env_logger = "0.10.0"
log        = "0.4.14"
serde      = "1.0"
serde_json = "1.0"
